# libs3

./: .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  s3.h
memory/: MEMORY.md  project_overview.md
src/: s3_access_grants.c  s3_access_point.c  s3_async.c  s3_batch.c  s3_bucket.c  s3_bucket_config.c  s3_checksum.c  s3_client.c  s3_control.c  s3_crypto.c  s3_error.c  s3_express.c  s3_highlevel.c  s3_http.c  s3_internal.h  s3_list.c  s3_log.c  s3_mrap.c  s3_multipart.c  s3_object.c  s3_object_config.c  s3_object_lambda.c  s3_outposts.c  s3_pool.c  s3_presign.c  s3_retry.c  s3_select.c  s3_sigv4.c  s3_sse.c  s3_storage_lens.c  s3_tables.c  s3_vectors.c  s3_xml.c
tests/: test_crypto.c  test_extra.c  test_http.c  test_integration.c  test_stress.c  test_xmlops.c
